--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,13 @@ readme = "README.md"
 repository = "https://github.com/alexdesander/palettevec"
 
 [dependencies]
+rustc-hash = "2.1.0"
+bitcode = { version = "0.6", optional = true }
+serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
 rand = "0.8.5"
+
+[features]
+serde = ["dep:serde"]
+bitcode = ["dep:bitcode"]
