Added new unsafe_optimizations feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rand_xoshiro = "0.7.0"
 [features]
 serde = ["dep:serde"]
 bitcode = ["dep:bitcode"]
+unsafe_optimizations = []
 
 [lib]
 bench = false
