--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ repository = "https://github.com/alexdesander/palettevec"
 
 [dependencies]
 rustc-hash = "2.1"
-bitcode = { version = "0.6" }
-serde = { version = "1", features = ["derive"] }
-serde-big-array = "0.5"
+bitcode = { version = "0.6", optional = true }
+serde = { version = "1", features = ["derive"], optional = true }
+serde-big-array = { version = "0.5", optional = true }
 
 [dev-dependencies]
 rand = "0.9"
@@ -23,7 +23,10 @@ criterion = { version = "0.5", features = ["html_reports"] }
 rand_xoshiro = "0.7"
 
 [features]
-unsafe_optimizations = []
+default = []
+unsafe-optimizations = []
+serde = ["dep:serde", "dep:serde-big-array"]
+bitcode = ["dep:bitcode"]
 
 [lib]
 bench = false
