--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ categories = ["compression", "data-structures"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/alexdesander/palettevec"
+include = ["src/**/*", "LICENSE-*", "README.md", "!**/tests/**/*"]
+
 
 [dependencies]
 rustc-hash = "2.1"
